docs/examples/valid/extension/enum/addEnumToInt.wacc
begin
  enum foo is
    A;
    B;
    C;
    D;
  end

  int a = foo->A + 2;
  println a
end
