docs/examples/invalid/semanticErr/extension/enum/InvalidEnumOperation.wacc
begin
  enum foo is
    A;
    B;
    C;
    D;
  end;

  bool x = foo->A >= foo->B
end
